--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-09  Miloslav Trmac  <mitr@volny.cz>
+
+	* cs.po: Updated Czech translation.
+
 2004-01-09  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
