2004-01-09  Sven Neumann  <sven@gimp.org>
	* plug-ins/common/tiff.c (load_image): applied a patch from
	Pablo d'Angelo that fixes layer offsets for multipage TIFF files
	(bug #131016).


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11962 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-09  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/tiff.c (load_image): applied a patch from 
+	Pablo d'Angelo that fixes layer offsets for multipage TIFF files
+	(bug #131016).
+
 2004-01-09  Michael Natterer  <mitch@gimp.org>
 
 	* plug-ins/script-fu/scripts/add-bevel.scm: fix typo:
