2004-01-09  Dave Neary  <bolsh@gimp.org>
        * app/display/gimpdisplayshell-scale.c: Modify behaviour of
        the magnify tool to always change the zoom factor by the
        golden ratio, rather than modify the numerator and denominator
        directly. Fixes bug #124073.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11963 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2004-01-09  Dave Neary  <bolsh@gimp.org>
+
+	* app/display/gimpdisplayshell-scale.c: Modify behaviour of 
+	the magnify tool to always change the zoom factor by the 
+	golden ratio, rather than modify the numerator and denominator
+	directly. Fixes bug #124073.
+
 2004-01-09  Sven Neumann  <sven@gimp.org>
 
 	* plug-ins/common/tiff.c (load_image): applied a patch from 
