2004-01-09  Sven Neumann  <sven@gimp.org>
	* app/gui/tips-dialog.c (tips_dialog_create): don't free the
	filename too early.


git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11965 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Sven Neumann  <sven@gimp.org>
+
+	* app/gui/tips-dialog.c (tips_dialog_create): don't free the
+	filename too early.
+
 2004-01-09  Dave Neary  <bolsh@gimp.org>
 
 	* app/display/gimpdisplayshell-scale.c: Modify behaviour of 
