Another small update to Serbian Gimp translation.
git-svn-id: http://svn.gnome.org/svn/gimp/trunk@11968 f57ce169-c725-0410-9505-c4955b3f21d2

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2004-01-10  Danilo Šegan  <dsegan@gmx.net>
 
+	* sr.po, sr@Latn.po: Small update.
+
+2004-01-10  Danilo Šegan  <dsegan@gmx.net>
+
 	* sr.po, sr@Latn.po: Updated Serbian translation.
 
 2004-01-09  Miloslav Trmac  <mitr@volny.cz>
